practice/labs/ch10-logistics/lab04-helm-list/world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: world
  namespace: world
spec:
  ingressClassName: nginx
  rules:
  - host: world.universe.mine
    http:
      paths:
      - backend:
          service:
            name: europe
            port:
              number: 80
        path: /europe
        pathType: Exact
      - backend:
          service:
            name: asia
            port:
              number: 80
        path: /asia
        pathType: Exact
status:
  loadBalancer: {}
